Fixed a bug where all of the cells in the last table row would get a bottom border when the table is collapsed for small screens.

--- a/src/resources/css/craft.scss
+++ b/src/resources/css/craft.scss
@@ -443,6 +443,8 @@ table.data.collapsed tbody tr:after { @include clearafter; }
 table.data.collapsed tbody th:not(.thin),
 table.data.collapsed tbody td:not(.thin) { clear: left; }
 table.data.collapsed tbody td form { display: inline-block; }
+table.data.collapsed tbody tr:last-child th:not(:last-child),
+table.data.collapsed tbody tr:last-child td:not(:last-child) { border-bottom: none; }
 
 .datatablesorthelper,
 .editabletablesorthelper { background: #fff;
